--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Hangman-rs"
+name = "hangman-rs"
 version = "0.1.0"
 authors = ["iTzBoboCz <iTzBoboCz@users.noreply.github.com>"]
 edition = "2018"
